# bevy-jam-factory

./: .gitignore  Cargo.toml  README.md  TODO.md
art/: harvester.kra  harvestersheet.kra  objectmap.kra  objects.kra  resources.kra  resourcesheet.kra  tilemap.kra  tiles.kra
assets/: map.tmx  objects.tsx  tiles.tsx
maps/: tilemap.tiled-session
src/: audio.rs  main.rs  state.rs  tiled.rs  tilemap.rs  ui.rs
src/assets/: tiled.rs
src/components/: camera.rs  game.rs  mod.rs  objects.rs  tiled.rs  tilemap.rs  ui.rs
src/data/: inventory.rs  items.rs  mod.rs  objects.rs  resources.rs
src/data/items/: conveyor.rs  crafter.rs  harvester.rs  mod.rs
src/events/: ui.rs
src/game/: mod.rs  objects.rs
src/plugins/: audio.rs  debug.rs  factory.rs  game.rs  game_ui.rs  main_menu.rs  mod.rs  pause_menu.rs  splash.rs  tiled.rs  tiled_picking.rs  ui.rs
src/plugins/game/: camera.rs  input.rs  inventory.rs  items.rs  mod.rs  objects.rs
src/plugins/game/items/: conveyor.rs  crafter.rs  harvester.rs  mod.rs
src/plugins/game_ui/: inventory.rs  item_info.rs  log.rs  mod.rs  object_info.rs
src/resources/: game.rs  mod.rs  ui.rs
src/states/: mod.rs
src/systems/: camera.rs  debug.rs  game.rs  game_ui.rs  input.rs  main_menu.rs  mod.rs  pause_menu.rs  splash.rs  tiled.rs  ui.rs
src/systems/ui/: button.rs  mod.rs
src/ui/: button.rs  image.rs  label.rs  mod.rs  tween.rs  window.rs
