[package]
name = "bevy-jam-factory"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bevy = "0.14"
bevy-inspector-egui = "0.25"
bevy_ecs_tilemap = { version = "0.14", features = ["atlas"] }
bevy_egui = "0.28"
# enable backend_egui here so that egui elements block what's below them
bevy_mod_picking = { version = "0.20", features = ["backend_egui"] }
futures-lite = "2.3"
strum = { version = "0.26", features = ["derive"] }
thiserror = "1.0"
tiled = "0.12"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
