[package]
name = "bevy-jam-factory"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
# do NOT ship with dynamic_linking enabled
bevy = { version = "0.14", features = ["dynamic_linking", "mp3"] }
bevy-inspector-egui = "0.25"
bevy_ecs_tilemap = { version = "0.14", features = ["atlas"] }
bevy_egui = "0.28"
# enable backend_egui here so that egui elements block what's below them
bevy_mod_picking = { version = "0.20", features = ["backend_egui"] }
bevy_simple_scroll_view = "0.2"
bevy_tweening = "0.11"
futures-lite = "2.3"
strum = { version = "0.26", features = ["derive"] }
thiserror = "1.0"
tiled = "0.12"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"
